--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # Database
-MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/chatmaster?retryWrites=true&w=majority
+MONGO_URI=
 
 # JWT Secret (Generate a secure random string)
 JWT_SECRET=your-super-secret-jwt-key-min-32-chars
